tests/warn/rescue-nested-sub-branch.jo
union AppError = NotFound | ParseError(msg: String)
union AppData = IntData(value: Int) | StrData(value: String)
type FullResult = AppData | AppError

def f(r: FullResult): AppData =
  r rescue ParseError(msg) => IntData(0)
